[project]
name = "PyCloudSim"
version = "0.0.1"
authors = [
  { name="Yifei Ren", email="ryf0510@live.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "bitmath",
    "networkx[default]",
    "Akatosh<2.0.0",
    "polars",
    "randomname",
]

[project.urls]
"Homepage" = "https://github.com/ulfaric/PyCloudSim"
"Bug Tracker" = "https://github.com/ulfaric/PyCloudSim/issues"

[tool.setuptools]
packages = ["PyCloudSim", "PyCloudSim.entity", "PyCloudSim.monitor", "PyCloudSim.scheduler"]